tools/architecture/validate-source-imports/tests/fixtures/invalid/contracts-ingestion-imports-adapter/src/schema.ts
import { ingestion } from "@platform/adapters-ingestion";
export type Schema = Record<string, unknown>;
